# litellm-agent-mcp

./: .gitignore  README.md  pyproject.toml  server.json  server.py
.github/workflows/: publish.yml
litellm_agent_mcp/: __init__.py
