[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "litellm-agent-mcp"
version = "1.0.0"
description = "MCP server giving AI agents access to 100+ LLMs through LiteLLM"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "LiteLLM", email = "support@litellm.ai" }
]
keywords = ["mcp", "litellm", "llm", "ai-agents", "multi-model"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
    "litellm>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/BerriAI/litellm"
Repository = "https://github.com/shin-bot-litellm/litellm-agent-mcp"

[project.scripts]
litellm-agent-mcp = "server:main"
